nginx-ic/snippet-advanced/snippet-ing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snippet-ingress
  namespace: ingress-nginx
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/server-snippet: |
      location /snippet {
        add_header test-header test;

        return 200 "NGINX Ingress Controller Snippet Test Success\n";
      }
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Snippet-Header: snippet";
spec:
  rules:
  - host: devbinx.com
    http:
      paths:
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: demo-svc-account
            port:
              number: 80
      - path: /menu
        pathType: Prefix
        backend:
          service:
            name: demo-svc-menu
            port:
              number: 80
      - path: /sales
        pathType: Prefix
        backend:
          service:
            name: demo-svc-sales
            port:
              number: 80
  ingressClassName: nginx
